fix student lookup:  s.Dcid=~(rn)

--- a/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
+++ b/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
@@ -113,7 +113,7 @@
      AND pscc_SealofBilit.PS_GROUP LIKE 'COMMON'
      AND pscc_SealofBilit.CATEGORY LIKE 'SealofBilitUpdate'
           
-    WHERE s.Student_Number = 99999999
+    WHERE s.Dcid = ~(rn)
     ]
     <table class="grid">
       <thead>
