Reformat language description as 'Language (lng)'

--- a/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
+++ b/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
@@ -45,11 +45,13 @@
       smsdx.CountryOfOrigin AS CountryOfOrigin_Code,
       pscc_MA_CountryOfOrigin.Description AS CountryOfOrigin_descr,
       smsdx.NativeLanguage AS NativeLanguage_code,
-      pscc_MA_NativeLang.Description AS NativeLanguage_descr,
+      REPLACE(TO_CHAR(pscc_MA_NativeLang.Description), 
+              CHR(40) || ' ' || TO_CHAR(smsdx.NativeLanguage) || ' ' || CHR(41),
+              '') || ' ' || CHR(40)||smsdx.NativeLanguage||CHR(41) AS NativeLanguage_descr,
       smsdx.LimitedEnglishProficiency AS LimitedEnglishProficiency_code,
       pscc_MA_EngProficiency.Description AS LimitedEnglishProficiency_descr,
       smsdx.LEPProgramStatus AS LEPProgramStatus_code,
-      pscc_MA_BilingualStat.Code AS LEPProgramStatus_descr,
+      pscc_MA_BilingualStat.Description AS LEPProgramStatus_descr,
       ssx.SealofBiliteracy AS SealofBiliteracy_code,
       pscc_SealofBilit.Description AS SealofBiliteracy_descr,
       smssx.ELL_SLIFE AS ELL_SLIFE_code,
