Add underlying codes as data-stored-code attributes

--- a/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
+++ b/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
@@ -167,49 +167,49 @@
           <td>DOE021</td>
           <td>EL Students in their First Year in U.S. Schools</td>
           <td>~(LEP1stYrInUS_code)</td>
-          <td>~(LEP1stYrInUS_value)</td>
+          <td data-stored-code-value="~(LEP1stYrInUS_code)">~(LEP1stYrInUS_value)</td>
         </tr>
         <tr>
           <td>DOE022</td>
           <td>Immigrant Status</td>
           <td>~(ImmigrantStatus_code)</td>
-          <td>~(ImmigrantStatus_value)</td>
+          <td data-stored-code-value="~(ImmigrantStatus_code)">~(ImmigrantStatus_value)</td>
         </tr>
         <tr>
           <td>DOE023</td>
           <td>Country of Origin</td>
           <td>~(CountryOfOrigin_code)</td>
-          <td>~(CountryOfOrigin_value)</td>
+          <td data-stored-code-value="~(CountryOfOrigin_code)">~(CountryOfOrigin_value)</td>
         </tr>
         <tr>
           <td>DOE024</td>
           <td>First/Native Language Code</td>
           <td>~(NativeLanguage_code)</td>
-          <td>~(NativeLanguage_value)</td>
+          <td data-stored-code-value="~(NativeLanguage_code)">~(NativeLanguage_value)</td>
         </tr>
         <tr>
           <td>DOE025</td>
           <td>Limited English Proficiency</td>
           <td>~(LimitedEnglishProficiency_code)</td>
-          <td>~(LimitedEnglishProficiency_value)</td>
+          <td data-stored-code-value="~(LimitedEnglishProficiency_code)">~(LimitedEnglishProficiency_value)</td>
         </tr>
         <tr>
           <td>DOE026</td>
           <td>ELL Program Status</td>
           <td>~(LEPProgramStatus_code)</td>
-          <td>~(LEPProgramStatus_value)</td>
+          <td data-stored-code-value="~(LEPProgramStatus_code)">~(LEPProgramStatus_value)</td>
         </tr>
         <tr>
           <td>DOE028</td>
           <td>Seal of Biliteracy</td>
           <td>~(SealofBiliteracy_code)</td>
-          <td>~(SealofBiliteracy_value)</td>
+          <td data-stored-code-value="~(SealofBiliteracy_code)">~(SealofBiliteracy_value)</td>
         </tr>
         <tr>
           <td>DOE041</td>
           <td>SLIFE</td>
           <td>~(ELL_SLIFE_code)</td>
-          <td>~(ELL_SLIFE_value)</td>
+          <td data-stored-code-value="~(ELL_SLIFE_code)">~(ELL_SLIFE_value)</td>
         </tr>
       </tbody>
     </table>
