--- a/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
+++ b/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
@@ -150,65 +150,55 @@
           <th colspan="4">SIMS/State Reporting Information</th>
         </tr>
         <tr>
-          <th>Data<br />Element</th>
-          <th>Name</th>
-          <th>Value</th>
-          <th>Description</th>
+          <th width="35%">Field<br />Element</th>
+          <th width="15%">ref</th>
+          <th width="50%">Description (value)</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>DOE008</td>
-          <td>City/Town of Birth</td>
-          <td>~(BirthCity)</td>
-          <td></td>
+          <td width="35%">City/Town of Birth</td>
+          <td width="15%">DOE008</td>
+          <td width="50%">~(BirthCity)</td>
         </tr>
         <tr>
-          <td>DOE021</td>
           <td>EL Students in their First Year in U.S. Schools</td>
-          <td>~(LEP1stYrInUS_code)</td>
+          <td>DOE021</td>
           <td data-stored-code-value="~(LEP1stYrInUS_code)">~(LEP1stYrInUS_value)</td>
         </tr>
         <tr>
-          <td>DOE022</td>
           <td>Immigrant Status</td>
-          <td>~(ImmigrantStatus_code)</td>
+          <td>DOE022</td>
           <td data-stored-code-value="~(ImmigrantStatus_code)">~(ImmigrantStatus_value)</td>
         </tr>
         <tr>
-          <td>DOE023</td>
           <td>Country of Origin</td>
-          <td>~(CountryOfOrigin_code)</td>
+          <td>DOE023</td>
           <td data-stored-code-value="~(CountryOfOrigin_code)">~(CountryOfOrigin_value)</td>
         </tr>
         <tr>
-          <td>DOE024</td>
           <td>First/Native Language Code</td>
-          <td>~(NativeLanguage_code)</td>
+          <td>DOE024</td>
           <td data-stored-code-value="~(NativeLanguage_code)">~(NativeLanguage_value)</td>
         </tr>
         <tr>
-          <td>DOE025</td>
           <td>Limited English Proficiency</td>
-          <td>~(LimitedEnglishProficiency_code)</td>
+          <td>DOE025</td>
           <td data-stored-code-value="~(LimitedEnglishProficiency_code)">~(LimitedEnglishProficiency_value)</td>
         </tr>
         <tr>
-          <td>DOE026</td>
           <td>ELL Program Status</td>
-          <td>~(LEPProgramStatus_code)</td>
+          <td>DOE026</td>
           <td data-stored-code-value="~(LEPProgramStatus_code)">~(LEPProgramStatus_value)</td>
         </tr>
         <tr>
-          <td>DOE028</td>
           <td>Seal of Biliteracy</td>
-          <td>~(SealofBiliteracy_code)</td>
+          <td>DOE028</td>
           <td data-stored-code-value="~(SealofBiliteracy_code)">~(SealofBiliteracy_value)</td>
         </tr>
         <tr>
-          <td>DOE041</td>
           <td>SLIFE</td>
-          <td>~(ELL_SLIFE_code)</td>
+          <td>DOE041</td>
           <td data-stored-code-value="~(ELL_SLIFE_code)">~(ELL_SLIFE_value)</td>
         </tr>
       </tbody>
