Refine table layout

--- a/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
+++ b/src/WEB_ROOT/teachers/studentpages/ell_lep_info.html
@@ -147,58 +147,58 @@
     <table class="grid">
       <thead>
         <tr>
-          <th colspan="4">SIMS/State Reporting Information</th>
+          <th colspan="3">SIMS/State Reporting Information</th>
         </tr>
         <tr>
-          <th width="35%">Field<br />Element</th>
-          <th width="15%">ref</th>
-          <th width="50%">Description (value)</th>
+          <th width="40%">Field</th>
+          <th width="10%">Data<br />Element</th>
+          <th width="50%">Value<br />Description (value)</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td width="35%">City/Town of Birth</td>
-          <td width="15%">DOE008</td>
-          <td width="50%">~(BirthCity)</td>
+          <td>City/Town of Birth</td>
+          <td style="font-size:80%;text-align:center;">DOE008</td>
+          <td>~(BirthCity)</td>
         </tr>
         <tr>
           <td>EL Students in their First Year in U.S. Schools</td>
-          <td>DOE021</td>
+          <td style="font-size:80%;text-align:center;">DOE021</td>
           <td data-stored-code-value="~(LEP1stYrInUS_code)">~(LEP1stYrInUS_value)</td>
         </tr>
         <tr>
           <td>Immigrant Status</td>
-          <td>DOE022</td>
+          <td style="font-size:80%;text-align:center;">DOE022</td>
           <td data-stored-code-value="~(ImmigrantStatus_code)">~(ImmigrantStatus_value)</td>
         </tr>
         <tr>
           <td>Country of Origin</td>
-          <td>DOE023</td>
+          <td style="font-size:80%;text-align:center;">DOE023</td>
           <td data-stored-code-value="~(CountryOfOrigin_code)">~(CountryOfOrigin_value)</td>
         </tr>
         <tr>
           <td>First/Native Language Code</td>
-          <td>DOE024</td>
+          <td style="font-size:80%;text-align:center;">DOE024</td>
           <td data-stored-code-value="~(NativeLanguage_code)">~(NativeLanguage_value)</td>
         </tr>
         <tr>
           <td>Limited English Proficiency</td>
-          <td>DOE025</td>
+          <td style="font-size:80%;text-align:center;">DOE025</td>
           <td data-stored-code-value="~(LimitedEnglishProficiency_code)">~(LimitedEnglishProficiency_value)</td>
         </tr>
         <tr>
           <td>ELL Program Status</td>
-          <td>DOE026</td>
+          <td style="font-size:80%;text-align:center;">DOE026</td>
           <td data-stored-code-value="~(LEPProgramStatus_code)">~(LEPProgramStatus_value)</td>
         </tr>
         <tr>
           <td>Seal of Biliteracy</td>
-          <td>DOE028</td>
+          <td style="font-size:80%;text-align:center;">DOE028</td>
           <td data-stored-code-value="~(SealofBiliteracy_code)">~(SealofBiliteracy_value)</td>
         </tr>
         <tr>
           <td>SLIFE</td>
-          <td>DOE041</td>
+          <td style="font-size:80%;text-align:center;">DOE041</td>
           <td data-stored-code-value="~(ELL_SLIFE_code)">~(ELL_SLIFE_value)</td>
         </tr>
       </tbody>
