--- a/src/WEB_ROOT/teachers/studentpages/ma_ell_lep_info.html
+++ b/src/WEB_ROOT/teachers/studentpages/ma_ell_lep_info.html
@@ -154,7 +154,7 @@
       <tbody>
         <tr>
           <td>Household requires translation</td>
-          <td style="font-size:80%;text-align:center;">Phlote</td>
+          <td style="font-size:80%;text-align:center;">PHLOTE</td>
           <td>~(Phlote)</td>
         </tr>
         <tr>
