Add ELL date fields to alert dialog

--- a/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
+++ b/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
@@ -3,20 +3,22 @@
   <div class='alertContent'>
     <p class='alertHeader'>~(studentname)</p>
     <p>~(first_name) ELL Information<br /></p>
-    <span style="font-size:88%;">
 ~[tlist_sql;
 SELECT
   s.Dcid AS s_dcid,
   scf.Phlote AS Phlote,
-  pscc_MA_NativeLang.Description NativeLanguage_descr
+  pscc_MA_NativeLang.Description NativeLanguage_descr,
+  TO_CHAR(udes.LEP_EntryDate, 'MM/DD/YYYY') AS LEP_EntryDate,
+  TO_CHAR(udes.LEP_ExitDate, 'MM/DD/YYYY') AS LEP_ExitDate,
+  TO_CHAR(udes.LEP_ScreenedOutDate, 'MM/DD/YYYY') AS LEP_ScreenedOutDate
 
 FROM Students s
 
-LEFT OUTER JOIN S_MA_Stu_Demographic_X smsdx
-  ON s.Dcid = smsdx.StudentsDcid
-
 LEFT OUTER JOIN StudentCoreFields scf
   ON s.Dcid = scf.StudentsDcid
+  
+LEFT OUTER JOIN S_MA_Stu_Demographic_X smsdx
+  ON s.Dcid = smsdx.StudentsDcid
 
 LEFT OUTER JOIN PS_COMMON_CODE pscc_MA_NativeLang
   ON smsdx.NativeLanguage = pscc_MA_NativeLang.Code 
@@ -25,17 +27,30 @@ LEFT OUTER JOIN PS_COMMON_CODE pscc_MA_NativeLang
       
 WHERE TO_CHAR('001' || s.Dcid) = ~(studentfrn)
 ]
-      <table width="100%" id="ma_ell_student_alert_sdcid_~(s_dcid)" style="border: 1px solid lightgray">
+    <table width="100%" id="ma_ell_student_alert_sdcid_~(s_dcid)" style="border: 1px solid lightgray">
+      <tbody>
         <tr>
           <td>Household requires translation <span style="font-size:80%;">(PHLOTE)</span></td>
           <td>~(Phlote)</td>
         </tr>
         <tr>
           <td>First/Native Language <span style="font-size:80%;">(DOE024)</span></td>
-          <td>~(NativeLanguage_descr,)</td>
+          <td>~(NativeLanguage_descr)</td>
         </tr>
+        <tr>
+          <td>LEP Entry Date</td>
+          <td>~(LEP_EntryDate)</td>
+        </tr>
+        <tr>
+          <td>LEP Exit Date</td>
+          <td>~(LEP_ExitDate)</td>
+        </tr>
+        <tr>
+          <td>LEP Screened Out Date</td>
+          <td>~(LEP_ScreenedOutDate)</td>
+        </tr>
+      </tbody>
     </table>
 [/tlist_sql]
-    </span>
   </div>
 </div>
