--- a/src/WEB_ROOT/teachers/studentpages/ma_ell_lep_info.html
+++ b/src/WEB_ROOT/teachers/studentpages/ma_ell_lep_info.html
@@ -45,9 +45,12 @@
       smsdx.CountryOfOrigin AS CountryOfOrigin_Code,
       pscc_MA_CountryOfOrigin.Description AS CountryOfOrigin_descr,
       smsdx.NativeLanguage AS NativeLanguage_code,
-      REPLACE(TO_CHAR(pscc_MA_NativeLang.Description), 
-              CHR(40) || ' ' || TO_CHAR(smsdx.NativeLanguage) || ' ' || CHR(41),
-              '') || ' ' || CHR(40)||smsdx.NativeLanguage||CHR(41) AS NativeLanguage_descr,
+      CASE
+        WHEN TRIM(TO_CHAR(pscc_MA_NativeLang.Description)) LIKE '' THEN '--'
+        ELSE REPLACE(TO_CHAR(pscc_MA_NativeLang.Description), 
+                CHR(40) || ' ' || TO_CHAR(smsdx.NativeLanguage) || ' ' || CHR(41),
+                '') || ' ' || CHR(40)||smsdx.NativeLanguage || CHR(41)
+      END AS NativeLanguage_descr,
       smsdx.LimitedEnglishProficiency AS LimitedEnglishProficiency_code,
       pscc_MA_EngProficiency.Description AS LimitedEnglishProficiency_descr,
       smsdx.LEPProgramStatus AS LEPProgramStatus_code,
