--- a/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
+++ b/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
@@ -1,3 +1,15 @@
+<!-- Bold the PHLOTE and Language values if PHLOTE is Yes-->
+<style>
+  table[id^="ma_ell_student_alert_sdcid"]:has([data-field-name="Phlote"] > [data-stored-code-value^="Yes"]) [data-field-name="Phlote"] [data-stored-code-value],
+  table[id^="ma_ell_student_alert_sdcid"]:has([data-field-name="Phlote"] > [data-stored-code-value^="Yes"]) [data-field-name="NativeLanguage"] [data-stored-code-value] {
+    font-weight: bold;
+  }
+
+  [data-field-name] .source_descr {
+    font-size: 80%;
+  }
+</style>
+
 <div class='studentAlert' id='alert-ma-ell-~(studentfrn)' style="width:640px;">
   <img class='alertImage' src='/images/img/MA_ELL_Alert.png' />
   <div class='alertContent'>
@@ -69,15 +81,15 @@ WHERE s.Dcid = ~(rn)
       
       <tbody>
         <tr data-field-name="Phlote">
-          <td>Household requires translation <span style="font-size:80%;">(PHLOTE)</span></td>
+          <td>Household requires translation <span class="source_descr">(PHLOTE)</span></td>
           <td colspan="2" data-stored-code-value="~(Phlote)">~(Phlote)</td>
         </tr>
         <tr data-field-name="NativeLanguage">
-          <td>First/Native Language <span style="font-size:80%;">(DOE024)</span></td>
+          <td>First/Native Language <span class="source_descr">(DOE024)</span></td>
           <td colspan="2" data-stored-code-value="~(NativeLanguage_code)">~(NativeLanguage_value)</td>
         </tr>
         <tr data-field-name="LEPProgramStatus">
-          <td>ELE Program Status <span style="font-size:80%;">(DOE026)</span></td>
+          <td>ELE Program Status <span class="source_descr">(DOE026)</span></td>
           <td  colspan="2" data-stored-code-value="~(LEPProgramStatus_code)">~(LEPProgramStatus_value)</td>
         </tr>
         <tr data-field-name="LEP_EntryExitDates">
