--- a/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
+++ b/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
@@ -168,6 +168,11 @@ FETCH FIRST 4 ROWS ONLY;
   </div>
 </div>
 <script type="text/javascript">
+(function () {
+  // if the table includes a blank value for the earliest progress target, then set that cell to '--'
+  $j('[id^="ma_ell_student_test_scores_sdcid_"] tr td.Term_Name').last().next('.Prog_Target_This_Yr:empty:first').html('--');
+  
   // if the scores tables has a row with results, then show the table
-  $j('[id^="ma_ell_student_test_scores_sdcid_"]').has("tr td.Term_Name").show()
+  $j('[id^="ma_ell_student_test_scores_sdcid_"]').has("tr td.Term_Name").show();
+})();
 </script>
