--- a/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
+++ b/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
@@ -1,20 +1,20 @@
-<!-- Bold the PHLOTE and Language values if PHLOTE is Yes-->
 <style>
+  /* Bold the PHLOTE and Language values if PHLOTE is Yes */
   table[id^="ma_ell_student_alert_sdcid"]:has([data-field-name="Phlote"] > [data-stored-code-value^="Yes"]) [data-field-name="Phlote"] [data-stored-code-value],
   table[id^="ma_ell_student_alert_sdcid"]:has([data-field-name="Phlote"] > [data-stored-code-value^="Yes"]) [data-field-name="NativeLanguage"] [data-stored-code-value] {
     font-weight: bold;
   }
-
+  /* Reduce the visibility of the source descriptors, ie: '(DOE024)') */
   [data-field-name] .source_descr {
     font-size: 80%;
     font-weight: normal;
     color: grey;
   }
-
+  /* Make the term names bold, ie: '(2024 - 2025)' */
   table[id^="ma_ell_student_test_scores_sdcid_"] .Term_Name {
     font-weight: bold;
   }
-
+  /* header for the ACCESS scores table */
   table[id^="ma_ell_student_test_scores_sdcid_"] .ma_ell_test_score_header {
     background-color: aliceblue;
   }
