--- a/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
+++ b/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
@@ -178,6 +178,22 @@ FETCH FIRST 4 ROWS ONLY;
     // if the table includes a blank value for the earliest progress target, then set that cell to 'n/a'
     $j('[id^="ma_ell_student_test_scores_sdcid_"] tr td.Term_Name').last().next('.Prog_Target_This_Yr:empty:first').html('<span class="ma_ell_prog_targ_na">n/a</span>');
 
+    // if the level is less than the target, set the background to pink
+    // if the level is greater than or equal to the target, set the background to green
+    $j('[id^="ma_ell_student_test_scores_"] tbody tr').each(function () {
+      const level = $j(this).find('td.Overall_Level').html();
+      const target = $j(this).find('td.Prog_Target_This_Yr').html();
+
+      if (isNaN(level) === false && isNaN(target) === false && level != '' && target != '') {
+        if (level < target) {
+          $j(this).find('td.Overall_Level').css("background-color", "#ffe6e9");
+        }
+        if (level >= target) {
+          $j(this).find('td.Overall_Level').css("background-color", "#e6fee6");
+        }
+      }
+    });
+
     // if the scores tables has a row with results, then show the table
     $j('[id^="ma_ell_student_test_scores_sdcid_"]').has("tr td.Term_Name").show();
   })();
