Correct field names

--- a/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
+++ b/src/WEB_ROOT/admin/alerts/MA_ELL_Alert.html
@@ -142,8 +142,8 @@ FETCH FIRST 1 ROWS ONLY;
 ]
         <tr data-field-name="District_ELD_Level">
           <td>District ELD Level</td>
-          <td data-field-name="ELD_Level">~(LEP_EntryDate)</td>
-          <td data-field-name="ELD_Level_Date">~(LEP_ExitDate)</td>
+          <td data-field-name="ELD_Level">~(ELD_Level)</td>
+          <td data-field-name="ELD_Level_Date">~(ELD_Level_Date)</td>
         </tr>
 [/tlist_sql]
       </tbody>
